--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 serde =  { version = "1.0", features = ["derive"] }
+rayon = "1.3.0"
 
 [dev-dependencies]
 criterion = "0.3"
